--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "8-13-19",
   "version": "1.0.0",
-  "description": "Finds the first missing positive integer in an array in linear time and linear space. Arrays can contain duplicates a",
+  "description": "Finds the first missing positive integer in an array in linear time and linear space. Arrays can contain duplicates and negative numbers.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-watch": "karma start my.conf.js --auto-watch --capture-timeout 60000",
+    "test-help": "karma start --help"
   },
   "author": "Brian Reynolds",
   "license": "ISC",
   "devDependencies": {
-    "karma": "^4.2.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-firefox-launcher": "^1.2.0",
-    "karma-jasmine": "^2.0.1"
+    "karma-ie-launcher": "^1.0.0"
   }
 }
