--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "Brian Reynolds",
   "license": "ISC",
   "devDependencies": {
-    "karma-ie-launcher": "^1.0.0"
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^1.2.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^2.0.1"
   }
 }
