--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
-    - "0.10"
-script: node_modules/karma/bin/karma start my.conf.js --single-run
+    - "node"
+script: node_modules/karma/bin/karma start my.conf.js --single-run --browsers Chrome
+services:
+  - xvfb
 before_install:
     - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
 before_script:
     - npm install
